[gd_scene load_steps=2 format=3 uid="uid://market_ui"]

[ext_resource type="Script" path="res://src/ui/MarketUI.gd" id="1_script"]

[node name="MarketUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "VILLAGE MARKETPLACE"
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Browse" type="Control" parent="Panel/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/TabContainer/Browse"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BuyList" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Browse/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Inventory" type="Control" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/TabContainer/Inventory"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SellList" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Inventory/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Close"